--- a/css/app.css
+++ b/css/app.css
@@ -23,17 +23,22 @@ li{
   width: calc(100% / 7);
   /* border: 1px solid white; */
   aspect-ratio: 1/1;
-  text-align: center;
-  display: flex;
+  /* text-align: center;
+  
   justify-content: center;
   align-items: center;
-  padding: 10px 10px;
+  */
+  padding: 10px 10px; 
+  
 }
 
-li > span{
+li > div{
   /* border: 1px solid white; */
   width: 100%;
   height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .light-blue{
