REFACTORY - with comments

--- a/css/app.css
+++ b/css/app.css
@@ -48,3 +48,15 @@ li > div{
 .dark-blue{
   background-color: #093B4C;
 }
+
+.light-green{
+  background-color: #0ED6A1;
+}
+
+.yellow{
+  background-color: #FFD166;
+}
+
+.purple{
+  background-color: #F0466F;
+}
