--- a/css/app.css
+++ b/css/app.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap');
 
 *{
   margin: 0;
@@ -12,6 +12,7 @@ li, ul, menu{
 
 body{
   padding: 40px 80px;
+  font-family: "Fredoka", sans-serif;
 }
 
 .flex{
