--- a/css/app.css
+++ b/css/app.css
@@ -15,6 +15,13 @@ body{
   font-family: "Fredoka", sans-serif;
 }
 
+h1 {
+  text-align: center;
+  font-size: 87px;
+  color: white;
+  margin-bottom: 50px;
+}
+
 .flex{
   display: flex;
   flex-wrap: wrap;
